@@ -1,0 +1,8 @@
+# -*- coding: utf-8 -*-
+#
+# GNU General Public License (GPL)
+#
+from zope.interface import Interface
+
+class ICollectiveJsSlimbox2Layer(Interface):
+    """Theme layer"""
