@@ -1,18 +1,16 @@
 <configure
-   xmlns="http://namespaces.zope.org/zope"
-   xmlns:browser="http://namespaces.zope.org/browser"
-   xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
-   i18n_domain="collective.js.slimbox2">
-  <browser:resourceDirectory
-      name="slimbox2"
-      directory="browser/resources"
-      permission="zope2.Public"
-  />
-  <genericsetup:registerProfile
-     name="default"
-     title="collective.js.slimbox2: Slimbox2 Plone js integration"
-     directory="profiles/default"
-     description=""
-     provides="Products.GenericSetup.interfaces.EXTENSION"
-     />
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    i18n_domain="collective.js.slimbox2">
+
+    <include package=".browser" />
+
+    <genericsetup:registerProfile
+        name="default"
+        title="collective.js.slimbox2: Slimbox2 Plone js integration"
+        directory="profiles/default"
+        description=""
+        provides="Products.GenericSetup.interfaces.EXTENSION" />
+
 </configure>
