@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<layers>
+  <layer name="slimbox2_layer"
+    interface="collective.js.slimbox2.browser.common.ICollectiveJsSlimbox2Layer" />
+</layers>
